src/app/modules/onboarding-v2/steps/groups/list/list.component.scss
m-onboarding__groupList {
  display: block;
  width: 100%;

  .m-onboarding__groupList {
    h3 {
      margin: 0;
      font-size: 13px;
      font-weight: 600;
      padding: 0 8px;
      @include m-theme() {
        color: themed($m-grey-800);
      }
    }
  }

  .m-groupList__empty {
    padding: 8px;
    font-size: 14px;
    line-height: 19px;
    @include m-theme() {
      color: themed($m-grey-400);
    }
  }

  .m-groupList__list {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  .m-groupList__item {
    display: flex;
    &:last-of-type {
      border-bottom: 0;
    }

    a {
      display: flex;
      flex-grow: 1;
      text-decoration: none;
      padding: 8px 8px;
    }

    .m-groupListItem__avatar {
      width: 49px;
      height: 49px;
      border-radius: 50%;
      background-size: cover;
      display: inline-block;
      margin-right: 8px;
      vertical-align: middle;
    }

    .m-groupListItem__body {
      display: inline-flex;
      vertical-align: middle;
      align-items: center;
      flex-direction: row;
      width: calc(100% - 36px);

      h4 {
        height: 21px;
        width: 100%;
        color: #636363;
        font-family: Roboto;
        font-size: 16px;
        font-weight: 500;
        line-height: 21px;
        margin: 0;
      }

      > div {
        width: 100%;
        max-width: calc(100% - 68px);
      }

      > div > span {
        overflow: hidden;
        position: relative;
        display: block;

        height: 19px;
        width: 92px;
        color: #9b9b9b;
        font-family: Roboto;
        font-size: 14px;
        line-height: 19px;
      }

      > i {
        font-size: 13px;
        margin-right: 8px;
      }

      .m-btn {
        height: 30px;
        font-size: 10px;
        letter-spacing: 1px;
        -webkit-font-smoothing: antialiased;
        text-rendering: optimizeLegibility;

        i {
          display: block;
          font-size: 16px;
          padding: 0;
          margin: 0;
        }

        span {
          display: none;
        }
      }
    }
  }
}

